--- a/Web-24BM/Views/Personas/Edit.cshtml
+++ b/Web-24BM/Views/Personas/Edit.cshtml
@@ -34,6 +34,16 @@
                 <span asp-validation-for="FechaNacimiento" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="RFC" class="control-label"></label>
+                <input asp-for="RFC" class="form-control" />
+                <span asp-validation-for="RFC" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AreaTrabajo" class="control-label"></label>
+                <input asp-for="AreaTrabajo" class="form-control" />
+                <span asp-validation-for="AreaTrabajo" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
