--- a/Web-24BM/Views/Personas/Delete.cshtml
+++ b/Web-24BM/Views/Personas/Delete.cshtml
@@ -35,6 +35,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaNacimiento)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RFC)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RFC)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AreaTrabajo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.AreaTrabajo)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
