--- a/Web-24BM/Views/Personas/Details.cshtml
+++ b/Web-24BM/Views/Personas/Details.cshtml
@@ -34,6 +34,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaNacimiento)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RFC)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RFC)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.AreaTrabajo)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.AreaTrabajo)
+        </dd>
     </dl>
 </div>
 <div>
