--- a/Web-24BM/Views/Personas/Index.cshtml
+++ b/Web-24BM/Views/Personas/Index.cshtml
@@ -29,6 +29,12 @@
                 <th>
                     @Html.DisplayNameFor(model => model.FechaNacimiento)
                 </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RFC)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AreaTrabajo)
+                </th>
                 <th></th>
             </tr>
         </thead>
@@ -47,6 +53,12 @@
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.FechaNacimiento)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RFC)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AreaTrabajo)
                     </td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
