--- a/Web-24BM/Views/Shared/_Layout.cshtml
+++ b/Web-24BM/Views/Shared/_Layout.cshtml
@@ -31,16 +31,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personas" asp-action="Index">Personas</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contacto" asp-action="Index">Contacto</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container-fluid">
             @RenderBody()
-        </main>
     </div>
 
     <footer class="border-top footer text-muted">
