--- a/Web-24BM/Views/Contacto/Index.cshtml
+++ b/Web-24BM/Views/Contacto/Index.cshtml
@@ -12,7 +12,7 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="~/img/Enduro.jpg" class="d-block w-100" alt="...">
+            <img src="https://hips.hearstapps.com/hmg-prod/images/delorean-alpha5-1653900182.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
