--- a/Web-24BM/Views/Formulario/Index.cshtml
+++ b/Web-24BM/Views/Formulario/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿<style>
-    .carousel-item{
-        height:450px
+    .carousel-item {
+        height: 450px;
     }
 </style>
+
 
 <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
@@ -19,14 +20,14 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img src="~/img/kawa.jpg" class="d-block w-100" alt="...">
+            <img src="~/img/Enduro.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="~/img/Kawa2.png" class="d-block w-100" alt="...">
+            <img src="~/img/Enduro.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
@@ -49,30 +50,32 @@
         <div class="alert alert-success" role="alert">
             Se ha enviado un correo de @TempData["EmailT"]
         </div>
+
     }
     <div class="row">
         <div class="col-12">
-            <h3 class="text-center">Formulario de contacto</h3>
-            <p class="text-center">Escribenos un mensaje y contactanos.</p>
+            <h3 class="text-center">Formulario de Contacto</h3>
+            <p class="text-center">Mandanos un mensaje y te contactaremos</p>
         </div>
         <div class="col-8">
             <form asp-action="EnviarEmail" method="post">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                    <input type="email" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <input type="text" name="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
                     <textarea class="form-control" name="comentario" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
+
                     <input type="submit" class="btn btn-primary" value="Enviar">
                 </div>
             </form>
         </div>
         <div class="col-4">
             <h3>Solicita información</h3>
-            <p>Envianos tu comentarioi y te responderemos en breve.</p>
+            <p>Enviaremos tu comentario y responderemos en breve...</p>
         </div>
     </div>
 </div>
