--- a/Web-24BM/Views/Shared/_Layout.cshtml
+++ b/Web-24BM/Views/Shared/_Layout.cshtml
@@ -26,13 +26,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Ejemplo" asp-action="Index">Ejemplo</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Personas" asp-action="Index">Personas</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Contacto" asp-action="Index">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contacto" asp-action="Formulario">Formulario</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Formulario" asp-action="Formulario">FormularioConDatos</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -41,8 +42,10 @@
         </nav>
     </header>
     <div class="container-fluid">
-            @RenderBody()
+
+        @RenderBody()
     </div>
+
 
     <footer class="border-top footer text-muted">
         <div class="container">
