--- a/Web-24BM/Views/Formulario/Formulario.cshtml
+++ b/Web-24BM/Views/Formulario/Formulario.cshtml
@@ -26,12 +26,12 @@
 
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-                    <input type="text" asp-for="Nombre" class="form-control" id="exampleFormControlInput1" placeholder="Tu Nombre">
+                    <input type="text" asp-for="Nombre" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
                 </div>
 
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Apellido</label>
-                    <input type="text" asp-for="Apellido" class="form-control" id="exampleFormControlInput1" placeholder="Tu Apellido">
+                    <input type="text" asp-for="Apellido" class="form-control" id="exampleFormControlInput1" placeholder="Apellido">
                 </div>
 
                 <div class="mb-3">
